Added Prof's Code

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				               id='password'>
 				</div>
 			<div>
-			<a href=landing_page class=btn id=login_button>Login</a><br />
+			<a href=landing_page.html class=btn id=login_button>Login</a><br />
 			</div>
 		</div>
 	</body>
