--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <html>
-	<body>
-		<h2>CONTACTICAL</h2>
-		<h4>Please Login</h4>
-			<div>
-				<label for="username" class=login-label>Username:</label>
-				<div class=login-label>
-					<input type='text'
-				       	       class='login-label form-control'
-				               placeholder='Enter your username'
-				               id='username'>
-				</div>
-				<label for="password" class=login-label>Password:</label>
-				<div class=login-label>
-					<input type='text'
-				       	       class='login-label form-control'
-				               placeholder='Enter your password'
-				               id='password'>
-				</div>
-			<div>
-			<a href=landing_page.html class=btn id=login_button>Login</a><br />
-			</div>
-		</div>
-	</body>
+<body>
+<h2>CONTACTICAL</h2>
+
+<div id="login">
+	<h4>Please Login</h4>
+	<label for="username" class=login-label>Username:</label>
+	<div class=login-label>
+		<input 	type='text'
+				class='login-label form-control'
+				placeholder='Enter your username'
+				id='username'>
+	</div>
+	<label for="password" class=login-label>Password:</label>
+	<div class=login-label>
+			<input 	type='text'
+					class='login-label form-control'
+					placeholder='Enter your password'
+					id='password'>
+	</div>
+	<span id="loginStatus"></span>
+</div>
+
+<div>
+	<a href=landing_page.html class=btn id=login_button>Login</a><br />
+</div>
+
+</body>
 </html>
