--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>
 
 <div>
-	<a href=landing_page.html class=btn id=login_button>Login</a><br />
+	<a href=landing_page.html class=btn id=login_button onclick="doLogin();">Login</a><br />
 </div>
 
 </body>
