Changed to button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>
 
 <div>
-	<a class=btn id=login_button onclick="doLogin();">Login</a><br />
+	<button type="button" id=loginButton onclick="doLogin();">Login</button>
 </div>
 
 </body>
