--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <script type="text/javascript" src="js/code.js"></script>
 
+
 <html>
+<head>
+	<title> contactical</title>
+	<link href="css/styles.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+</head>
 <body>
-<h2>CONTACTICAL</h2>
+<h1 id="title">contactical</h1>
+<h2 id="subtitle">A better contact-management system</h2>
 
 <div id="login">
-	<h4>Please Login</h4>
+	<h4 class="login-title">Please Login</h4>
 	<label for="username" class=login-label>Username:</label>
 	<div class=login-label>
 		<input 	type='text'
@@ -25,7 +32,7 @@
 </div>
 
 <div>
-	<button type="button" id=loginButton onclick="doLogin();">Login</button>
+	<button class="buttons"type="button" id=loginButton onclick="doLogin();">Login</button>
 </div>
 
 </body>
