--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<link href="css/styles.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 </head>
-<body>
-<h1 id="title">contactical</h1>
-<h2 id="subtitle">A better contact-management system</h2>
 
-<div id="login">
+<body>
+<div class="login">
+	<h1 id="title">contactical</h1>
+	<h2 id="subtitle">A better contact-management system</h2>
 	<h4 class="login-title">Please Login</h4>
 	<label for="username" class=login-label>Username:</label>
 	<div class=login-label>
@@ -27,12 +27,16 @@
 					placeholder='Enter your password'
 					id='password'>
 	</div>
+	<button class="buttons"type="button" id=loginButton onclick="doLogin();">Login</button>
 	<span id="loginStatus"></span>
 	<span id="errorDump"></span>
 </div>
+<div class="phone-image">
+	<img class="contactical" src="/images/contactical.png">
+</div>
 
 <div>
-	<button class="buttons"type="button" id=loginButton onclick="doLogin();">Login</button>
+	
 </div>
 
 </body>
