--- a/create_account.html
+++ b/create_account.html
@@ -12,18 +12,23 @@
 <div class="login">
 	<h1 id="title">contactical</h1>
 	<h2 id="subtitle">A better contact-management system</h2>
-	<h4 class="login-title">Please Login</h4>
+	<h4 class="login-title">Create Account</h4>
 	
 	<div class=loginData>
+		<label class=login-label>First Name:</label>
+		<input placeholder='Enter your first name' class='data-entry'>
+		<label class=login-label>Last Name:</label>
+		<input placeholder='Enter your last name' class='data-entry'>
 		<label class=login-label>Username:</label>
-		<input placeholder='Enter your username' class='data-entry'>
+		<input placeholder='Enter your user name' class='data-entry'>
 		<label class=login-label>Password:</label>
 		<input placeholder='Enter your password' class='data-entry'>
 	</div>
-	<button class="buttons" type="button" id=loginButton onclick="doLogin();">Login</button>
+
+	<button class="buttons" type="button" id=loginButton onclick="doAccountCreate();">Create Account</button>
 	<span id="loginStatus"></span>
 	<span id="errorDump"></span>
-	<a href="create_account.html" class="createAccount">Don't have an account?</a>
+	<a href="index.html" class="createAccount">Back to login</a>
 </div>
 <div class="phone-image">
 	<img class="contactical" src="/images/contactical.png">
