Added ID's for labels, and button styling for Create Account

--- a/create_account.html
+++ b/create_account.html
@@ -16,13 +16,13 @@
 	
 	<div class=loginData>
 		<label class=login-label>First Name:</label>
-		<input placeholder='Enter your first name' class='data-entry'>
+		<input id='first-name' placeholder='Enter your first name' class='data-entry'>
 		<label class=login-label>Last Name:</label>
-		<input placeholder='Enter your last name' class='data-entry'>
+		<input id='last-name' placeholder='Enter your last name' class='data-entry'>
 		<label class=login-label>Username:</label>
-		<input placeholder='Enter your user name' class='data-entry'>
+		<input id='user' placeholder='Enter your user name' class='data-entry'>
 		<label class=login-label>Password:</label>
-		<input placeholder='Enter your password' class='data-entry'>
+		<input id='pass' placeholder='Enter your password' class='data-entry'>
 	</div>
 
 	<button class="buttons" type="button" id=loginButton onclick="doAccountCreate();">Create Account</button>
