--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 	<title>contactical</title>
 	<link href="css/styles.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
 <div class="login">
-	<h1 id="title">contactical</h1>
+	<h1 id="title">Contactical</h1>
 	<h2 id="subtitle">A better contact-management system</h2>
 	<h4 class="login-title">Please Login</h4>
 	
