--- a/create_account.html
+++ b/create_account.html
@@ -1,6 +1,3 @@
-<script type="text/javascript" src="js/code.js"></script>
-
-
 <html>
 <head>
 	<title>contactical</title>
@@ -8,36 +5,33 @@
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+	<script type="text/javascript" src="js/code.js"></script>
 </head>
 
 <body>
 <div class="login">
-	<h1 id="title">contactical</h1>
-	<h2 id="subtitle">A better contact-management system</h2>
-	<h4 class="login-title">Create Account</h4>
+	<h1 class="title">contactical</h1>
+	<h2 class="subtitle">A better contact-management system</h2>
+	<h4 class="loginTitle">Create Account</h4>
 	
-	<div class=loginData>
-		<label class=login-label>First Name:</label>
-		<input id='first-name' placeholder='Enter your first name' class='data-entry'>
-		<label class=login-label>Last Name:</label>
-		<input id='last-name' placeholder='Enter your last name' class='data-entry'>
-		<label class=login-label>Username:</label>
-		<input id='user' placeholder='Enter your user name' class='data-entry'>
-		<label class=login-label>Password:</label>
-		<input id='pass' placeholder='Enter your password' class='data-entry'>
+	<div class="loginData">
+		<label class="loginLabel">First Name:</label>
+		<input id="first-name" placeholder="Enter your first name" class="dataEntry">
+		<label class="loginLabel">Last Name:</label>
+		<input id="last-name" placeholder="Enter your last name" class="dataEntry">
+		<label class="loginLabel">Username:</label>
+		<input id="user" placeholder="Enter your user name" class="dataEntry">
+		<label class="loginLabel">Password:</label>
+		<input id="pass" placeholder="Enter your password" class="dataEntry">
 	</div>
 
 	<button class="buttons" type="button" id=loginButton onclick="doAccountCreate();">Create Account</button>
 	<span id="loginStatus"></span>
 	<span id="errorDump"></span>
-	<a href="index.html" class="createAccount">Back to login</a>
+	<button class="buttons createAccount" onclick="goToLogin();" type="button">Go home</button>
 </div>
-<div class="phone-image">
+<div class="phoneImage">
 	<img class="contactical" src="/images/contactical.png">
-</div>
-
-<div>
-	
 </div>
 
 </body>
