--- a/index.html
+++ b/index.html
@@ -6,29 +6,41 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 	<script type="text/javascript" src="js/code.js"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </head>
 
 <body>
-<div class="login">
-	<h1 class="title">Contactical</h1>
-	<h2 class="subtitle">A better contact-management system</h2>
-	<h4 class="loginTitle">Please Login</h4>
-	
-	<div class="loginData">
-		<label class="loginLabel">Username:</label>
-		<input id="user" placeholder="Enter your username" class="dataEntry">
-		<label class="loginLabel">Password:</label>
-		<input id="pass" placeholder="Enter your password" class="dataEntry">
+<div class="container">
+	<div class="row h-100 justify-content-center align-items-center">
+		<div class="col-12 h-75 justify-content-center my-auto">
+			<div class="container-sm" style="max-width: 800px; background-color: #f0f1ff; border-radius: 25px; padding: 1.5rem;">
+				<div class="row">
+					<div class="col-6">
+						<h1 style="text-align: center">Contactical Login</h1>
+						<form style="display: flex; flex-direction: column;">
+							<div class="form-group">
+								<label class="form-label" for="exampleInputEmail1">Email address</label>
+								<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+							</div>
+							<div class="form-group"">
+								<label class="form-label" for="exampleInputPassword1">Password</label>
+								<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+							</div>
+							<button type="submit" style="align-self: center" class="btn btn-primary">Login</button>
+						</form>
+					</div>
+					<div class="col-6">
+						<img style="max-width: 100%;" src="images/hand.png">
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
-	<button class="buttons" onclick="doLogin();">Login</button>
-	<span id="loginStatus"></span>
-	<span id="errorDump"></span>
-	<button class="buttons createAccount" onclick="goToCreateAccount();" type="button">Don't have an account?</button>
 </div>
 
-<div class="phoneImage">
-		<img class="contactical" src="/images/contactical.png">
-</div>
+
+
 
 </body>
 </html>
