--- a/index.html
+++ b/index.html
@@ -18,24 +18,28 @@
 		</div>
 	</div>
 	<div class="row" style="border-radius: 25px; overflow: hidden;">
-		<div class="col-6 d-flex align-items-center justify-content-center flex-column" style="background-color: #ffffef">
+		<div class="col-12 d-flex align-items-center justify-content-center flex-column">
 			<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-key-fill" viewBox="0 0 16 16">
 				<path d="M3.5 11.5a3.5 3.5 0 1 1 3.163-5H14L15.5 8 14 9.5l-1-1-1 1-1-1-1 1-1-1-1 1H6.663a3.5 3.5 0 0 1-3.163 2zM2.5 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
 			</svg>
-			<h3>Login</h3>
-			<form>
+			<h3 class="mb-3">Login</h3>
+			<form style="width: 100%;">
 				<div class="form-group">
-					<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+					<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" style="border-radius: 7px 7px 0 0; font-size: 18px">
 				</div>
 				<div class="form-group mb-3">
-					<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+					<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" style="border-radius: 0 0 7px 7px; font-size: 18px;">
 				</div>
-				<button type="submit" class="btn btn-primary">Submit</button>
+				<a style="margin-bottom: 20px;" href="#">Create an Account...</a>
+				<div class="form-group mb-3">
+					<button type="submit" style="width: 100%" class="btn btn-primary btn-lg">Submit</button>
+				</div>
+
 			</form>
 		</div>
-		<div class="col-6" style="padding: 0; overflow: hidden;">
-			<img src="images/contactical.png" style="max-width: 350px;">
-		</div>
+<!--		<div class="col-6" style="padding: 0; overflow: hidden;">-->
+<!--			<img src="images/contactical.png" style="max-width: 350px;">-->
+<!--		</div>-->
 	</div>
 </div>
 
