--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </head>
 
-<body class="d-flex align-items-center text-center">
-<div class="container loginContainer">
+<body class="d-flex align-items-center text-center" style="background-color: cornflowerblue;">
+<div class="container loginContainer" style="background-color: white; border-radius: 25px; padding: 25px;">
 	<div class="row">
-		<div class="col-12">
-			<h1 style="margin-bottom: 50px;">Contactical</h1>
+		<div class="col-12" style="margin-bottom: 20px; margin-top: 20px;">
+			<h1 style="color: #0b5ed7">
+				Contactical
+			</h1>
+
+			<h5 class="text-muted">The Most Tactical way to store contacts.</h5>
 		</div>
 	</div>
 	<div class="row" style="border-radius: 25px; overflow: hidden;">
@@ -30,12 +34,11 @@
 				<div class="form-group mb-3">
 					<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" style="border-radius: 0 0 7px 7px; font-size: 18px;">
 				</div>
-				<a style="margin-bottom: 20px;" href="#">Create an Account...</a>
 				<div class="form-group mb-3">
 					<button type="submit" style="width: 100%" class="btn btn-primary btn-lg">Submit</button>
 				</div>
-
 			</form>
+			<a style="margin-bottom: 20px;" href="#">Create an Account...</a>
 		</div>
 <!--		<div class="col-6" style="padding: 0; overflow: hidden;">-->
 <!--			<img src="images/contactical.png" style="max-width: 350px;">-->
