Add required inputs.

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 			<h3 class="mb-3">Login</h3>
 			<form style="width: 100%;">
 				<div class="form-group">
-					<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" style="border-radius: 7px 7px 0 0; font-size: 18px">
+					<input required type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" style="border-radius: 7px 7px 0 0; font-size: 18px">
 				</div>
 				<div class="form-group mb-3">
-					<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" style="border-radius: 0 0 7px 7px; font-size: 18px;">
+					<input required type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" style="border-radius: 0 0 7px 7px; font-size: 18px;">
 				</div>
 				<div class="form-group mb-3">
 					<button type="submit" style="width: 100%" class="btn btn-primary btn-lg">Submit</button>
