--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<input required type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" style="border-radius: 0 0 7px 7px; font-size: 18px;">
 				</div>
 				<div class="form-group mb-3">
-					<button type="submit" style="width: 100%" class="btn btn-primary btn-lg">Submit</button>
+					<button type="submit" style="width: 100%" class="btn btn-primary btn-lg">Login</button>
 				</div>
 			</form>
 			<a style="margin-bottom: 20px;" href="#">Create an Account...</a>
