--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<path d="M3.5 11.5a3.5 3.5 0 1 1 3.163-5H14L15.5 8 14 9.5l-1-1-1 1-1-1-1 1-1-1-1 1H6.663a3.5 3.5 0 0 1-3.163 2zM2.5 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
 			</svg>
 			<h3 class="mb-3">Login</h3>
-			<form style="width: 100%;">
+			<form style="width: 75%;">
 				<div class="form-group">
 					<input required type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" style="border-radius: 7px 7px 0 0; font-size: 18px">
 				</div>
@@ -35,7 +35,7 @@
 					<input required type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" style="border-radius: 0 0 7px 7px; font-size: 18px;">
 				</div>
 				<div class="form-group mb-3">
-					<button type="submit" style="width: 100%" class="btn btn-primary btn-lg">Login</button>
+					<button type="submit" style="width: 75%; border-radius: 24px;" class="btn btn-primary btn-lg">Login</button>
 				</div>
 			</form>
 			<a style="margin-bottom: 20px;" href="#">Create an Account...</a>
