--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
 </head>
 
 <body class="d-flex align-items-center text-center" style="background-color: cornflowerblue;">
-<div class="container loginContainer" style="background-color: white; border-radius: 25px; padding: 25px;">
+<div class="container loginContainer">
 	<div class="row">
-		<div class="col-12" style="margin-bottom: 20px; margin-top: 20px;">
+		<div class="col-12 loginHeader">
 			<h1 style="color: #0b5ed7">
 				Contactical
 			</h1>
-
 			<h5 class="text-muted">The Most Tactical way to store contacts.</h5>
 		</div>
 	</div>
 	<div class="row" style="border-radius: 25px; overflow: hidden;">
-		<div class="col-12 d-flex align-items-center justify-content-center flex-column">
+		<div class="loginCard">
 			<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-key-fill" viewBox="0 0 16 16">
 				<path d="M3.5 11.5a3.5 3.5 0 1 1 3.163-5H14L15.5 8 14 9.5l-1-1-1 1-1-1-1 1-1-1-1 1H6.663a3.5 3.5 0 0 1-3.163 2zM2.5 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
 			</svg>
@@ -38,11 +37,8 @@
 					<button type="submit" style="width: 75%; border-radius: 24px;" class="btn btn-primary btn-lg">Login</button>
 				</div>
 			</form>
-			<a style="margin-bottom: 20px;" href="#">Create an Account...</a>
+			<a style="margin-bottom: 20px;" href="create_account.html">Create an Account...</a>
 		</div>
-<!--		<div class="col-6" style="padding: 0; overflow: hidden;">-->
-<!--			<img src="images/contactical.png" style="max-width: 350px;">-->
-<!--		</div>-->
 	</div>
 </div>
 
