--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <head>
 	<title>contactical</title>
 	<link href="css/styles.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-	<script type="text/javascript" src="js/code.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="js/code.js"></script>
+	<script type="text/javascript" src="js/md5.js"></script>
 </head>
 
 <body class="d-flex align-items-center text-center" style="background-color: cornflowerblue;">
@@ -28,13 +27,16 @@
 			<h3 class="mb-3">Login</h3>
 			<form style="width: 75%;">
 				<div class="form-group">
-					<input required type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" style="border-radius: 7px 7px 0 0; font-size: 18px">
+					<input required class="form-control" id="user" aria-describedby="emailHelp" placeholder="Enter login" style="border-radius: 7px 7px 0 0; font-size: 18px">
 				</div>
 				<div class="form-group mb-3">
-					<input required type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" style="border-radius: 0 0 7px 7px; font-size: 18px;">
+					<input required type="password" class="form-control" id="pass" placeholder="Password" style="border-radius: 0 0 7px 7px; font-size: 18px;">
 				</div>
 				<div class="form-group mb-3">
-					<button type="submit" style="width: 75%; border-radius: 24px;" class="btn btn-primary btn-lg">Login</button>
+					<button action="landing_page.html" type="submit" style="width: 75%; border-radius: 24px;" class="btn btn-primary btn-lg" onsubmit="doLogin()">Login</button>
+				</div>
+				<div class="form-group mb-3">
+					<span id="loginStatus"></span>
 				</div>
 			</form>
 			<a style="margin-bottom: 20px;" href="create_account.html">Create an Account...</a>
