--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 		</div>
 	</div>
 	<div class="row" style="border-radius: 25px; overflow: hidden;">
-		<div class="loginCard">
+		<div class="loginCard" id="loginView">
 			<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-key-fill" viewBox="0 0 16 16">
 				<path d="M3.5 11.5a3.5 3.5 0 1 1 3.163-5H14L15.5 8 14 9.5l-1-1-1 1-1-1-1 1-1-1-1 1H6.663a3.5 3.5 0 0 1-3.163 2zM2.5 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
 			</svg>
 			<h3 class="mb-3">Login</h3>
-			<form style="width: 75%;">
+			<form style="width: 75%;" onsubmit="return doLogin()">
 				<div class="form-group">
 					<input required class="form-control" id="user" aria-describedby="emailHelp" placeholder="Enter login" style="border-radius: 7px 7px 0 0; font-size: 18px">
 				</div>
@@ -33,7 +33,7 @@
 					<input required type="password" class="form-control" id="pass" placeholder="Password" style="border-radius: 0 0 7px 7px; font-size: 18px;">
 				</div>
 				<div class="form-group mb-3">
-					<button action="landing_page.html" type="submit" style="width: 75%; border-radius: 24px;" class="btn btn-primary btn-lg" onsubmit="doLogin()">Login</button>
+					<button action="landing_page.html" type="submit" style="width: 75%; border-radius: 24px;" class="btn btn-primary btn-lg">Login</button>
 				</div>
 				<div class="form-group mb-3">
 					<span id="loginStatus"></span>
