--- a/create_account.html
+++ b/create_account.html
@@ -2,37 +2,60 @@
 <head>
 	<title>contactical</title>
 	<link href="css/styles.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="js/code.js"></script>
-    <script type="text/javascript" src="js/md5.js"></script>
+	<script type="text/javascript" src="js/md5.js"></script>
 </head>
 
-<body>
-<div class="login">
-	<h1 class="title">contactical</h1>
-	<h2 class="subtitle">A better contact-management system</h2>
-	<h4 class="loginTitle">Create Account</h4>
-	
-	<div class="loginData">
-		<label class="loginLabel">First Name:</label>
-		<input id="first-name" placeholder="Enter your first name" class="dataEntry">
-		<label class="loginLabel">Last Name:</label>
-		<input id="last-name" placeholder="Enter your last name" class="dataEntry">
-		<label class="loginLabel">Username:</label>
-		<input id="user" placeholder="Enter your user name" class="dataEntry">
-		<label class="loginLabel">Password:</label>
-		<input id="pass" placeholder="Enter your password" class="dataEntry">
+<body class="d-flex align-items-center text-center" style="background-color: cornflowerblue;">
+<div class="container loginContainer">
+	<div class="row">
+		<div class="col-12 loginHeader">
+			<h1 style="color: #0b5ed7">
+				Contactical
+			</h1>
+			<h5 class="text-muted">The Most Tactical way to store contacts.</h5>
+		</div>
 	</div>
+	<div class="row" style="border-radius: 25px; overflow: hidden;">
+		<div class="loginCard" id="loginView">
+			<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-key-fill" viewBox="0 0 16 16">
+				<path d="M3.5 11.5a3.5 3.5 0 1 1 3.163-5H14L15.5 8 14 9.5l-1-1-1 1-1-1-1 1-1-1-1 1H6.663a3.5 3.5 0 0 1-3.163 2zM2.5 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+			</svg>
 
-	<button class="buttons" type="button" id=loginButton onclick="doAccountCreate();">Create Account</button>
-	<span id="loginStatus"></span>
-	<span id="errorDump"></span>
-	<button class="buttons createAccount" onclick="goToLogin();" type="button">Go home</button>
-</div>
-<div class="phoneImage">
-	<img class="contactical" src="/images/contactical.png">
+			<h3 class="mb-3">Create Account</h3>
+			<form class="form-floating" style="width: 75%;" onsubmit="return doAccountCreate()">
+				<div class="form-floating mb-2">
+					<input required class="form-control" id="first-name" aria-describedby="emailHelp" placeholder=" ">
+					<label for="first-name">First Name</label>
+				</div>
+				<div class="form-floating mb-2">
+					<input required class="form-control" id="last-name" aria-describedby="emailHelp" placeholder=" ">
+					<label for="last-name">Last Name</label>
+				</div>
+				<div class="form-floating mb-2">
+					<input required class="form-control" id="user" aria-describedby="emailHelp" placeholder=" ">
+					<label for="user">Login</label>
+				</div>
+				<div class="form-floating mb-3">
+					<input required type="password" class="form-control" id="pass" placeholder="Password">
+					<label for="pass">Password</label>
+				</div>
+				<div class="form-group mb-3">
+					<button action="landing_page.html" type="submit" style="width: 75%; border-radius: 24px;" class="btn btn-primary btn-lg">Create Account</button>
+				</div>
+
+				<div class="form-group mb-3">
+					<span id="loginStatus"></span>
+				</div>
+
+			</form>
+
+			<a style="margin-bottom: 20px;" href="index.html">Back to login...</a>
+		</div>
+	</div>
 </div>
 
 </body>
