--- a/landing_page.html
+++ b/landing_page.html
@@ -1,37 +1,33 @@
-<!DOCTYPE html>
-
-<script type="text/javascript" src="js/code.js"></script>
-
 <html>
 <head>
-
 	<title>contactical</title>
 	<link href="css/styles.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="js/code.js"></script>
+	<script type="text/javascript" src="js/md5.js"></script>
 </head>
 
-<body></body>
-<div class="login">
-	<h1 id="title">Contactical</h1> 
-	<div class=add-contact>
-		<button class="buttons" type="button" id=addContact>add new contact</button>
-		<button class="buttons" type="button" id=viewContacts onclick="doLogin();">contact list</button>
-		<button class="buttons" type="button" id=loginButton onclick="doLogin();"></button>
+<body class="d-flex align-items-center text-center" style="background-color: cornflowerblue;">
+<div class="container loginContainer">
+	<div class="row">
+		<div class="col-12 loginHeader">
+			<h1 style="color: #0b5ed7">
+				Contactical
+			</h1>
+			<h5 class="text-muted">The Most Tactical way to store contacts.</h5>
+		</div>
 	</div>
-	<button class="buttons" type="button" id=loginButton onclick="doLogin();">Login</button>
-	<span id="loginStatus"></span>
-	<span id="errorDump"></span>
-	<button class="buttons" onclick="goToCreateAccount();" type="button" href="create_account.html" id="create_account">Don't have an account?</button>
-</div>
-<div class="phone-image">
-	
-		<div><img class="contactical" src="/images/contactical.png"></div>
-	
-	
-</div>
-
-<div>
-	
+	<div class="row" style="border-radius: 25px; overflow: hidden;">
+		<div class="loginCard" id="loginView">
+			<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-key-fill" viewBox="0 0 16 16">
+				<path d="M3.5 11.5a3.5 3.5 0 1 1 3.163-5H14L15.5 8 14 9.5l-1-1-1 1-1-1-1 1-1-1-1 1H6.663a3.5 3.5 0 0 1-3.163 2zM2.5 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+			</svg>
+			<h3 class="mb-3">Welcome :)</h3>
+			<a style="margin-bottom: 20px;" href="index.html">Back to login...</a>
+		</div>
+	</div>
 </div>
 
 </body>
