--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript" src="js/code.js"></script>
 </head>
 
-<body class="d-flex align-items-center text-center" style="background-color: cornflowerblue;">
+<body class="d-flex align-items-center text-center">
 <div class="container loginContainer">
 	<div class="row">
 		<div class="col-12 loginHeader">
