--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 	<link href="css/styles.css" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="js/code.js"></script>
 </head>
 
 <body class="d-flex align-items-center text-center" style="background-color: cornflowerblue;">
+<div id="background" class="backgroundBlurImg" style="filter: blur(8px);"></div>
 <div class="container loginContainer">
 	<div class="row">
 		<div class="col-12 loginHeader">
