--- a/create_account.html
+++ b/create_account.html
@@ -9,6 +9,7 @@
 </head>
 
 <body class="d-flex align-items-center text-center" style="background-color: cornflowerblue;">
+<div id="background" class="backgroundBlurImg" style="filter: blur(8px);"></div>
 <div class="container loginContainer">
 	<div class="row">
 		<div class="col-12 loginHeader">
