--- a/landing_page.html
+++ b/landing_page.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript" src="js/code.js"></script>
 </head>
 
-<body class="d-flex align-items-center text-center" style="background-color: cornflowerblue;">
+<body class="d-flex align-items-center text-center" style="background-color: cornflowerblue; height: 100%;">
 <div id="background" class="backgroundBlurImg" style="filter: blur(8px);"></div>
 <div class="container loginContainer">
 	<div class="row">
