Fix issues with the focus borders being cutoff.

--- a/create_account.html
+++ b/create_account.html
@@ -26,7 +26,7 @@
 			</svg>
 
 			<h3 class="mb-3">Create Account</h3>
-			<form class="form-floating" style="width: 75%;" onsubmit="return doAccountCreate()">
+			<form class="form-floating loginForm" onsubmit="return doAccountCreate()">
 				<div class="d-flex">
 					<div class="form-floating mb-2">
 						<input required class="form-control firstName" id="first-name" aria-describedby="emailHelp" placeholder=" ">
