--- a/create_account.html
+++ b/create_account.html
@@ -5,7 +5,9 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="js/code.js"></script>
+	<script type="text/javascript" src="js/cookies.js"></script>
+	<script type="text/javascript" src="js/design.js"></script>
+	<script type="text/javascript" src="js/user.js"></script>
 </head>
 
 <body class="d-flex align-items-center text-center" style="background-color: cornflowerblue; height: 100%;">
@@ -26,7 +28,7 @@
 			</svg>
 
 			<h3 class="mb-3">Create Account</h3>
-			<form class="form-floating" style="width: 75%;" onsubmit="return doAccountCreate()">
+			<form class="form-floating" style="width: 75%;" onsubmit="return doCreateAccount()">
 				<div class="d-flex">
 					<div class="form-floating mb-2">
 						<input required class="form-control firstName" id="first-name" aria-describedby="emailHelp" placeholder=" ">
