--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<input required type="password" class="form-control" id="pass" placeholder="Password" style="border-radius: 0 0 7px 7px; font-size: 18px; position: relative">
 				</div>
 				<div class="form-group mb-3">
-					<button action="landing_page.html" type="submit" style="width: 75%; border-radius: 24px;" class="btn btn-primary btn-lg">Login</button>
+					<button type="submit" style="width: 75%; border-radius: 24px;" class="btn btn-primary btn-lg">Login</button>
 				</div>
 				<div class="form-group mb-3">
 					<span id="loginStatus"></span>
