--- a/landing_page.html
+++ b/landing_page.html
@@ -6,6 +6,8 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="js/cookies.js"></script>
+	<script type="text/javascript" src="js/design.js"></script>
+	<script type="text/javascript" src="js/user.js"></script>
 	<script type="text/javascript" src="js/contact.js"></script>
 </head>
 
@@ -27,7 +29,10 @@
 			</svg>
 			<h3 class="mb-3">Welcome :)</h3>
 			<p class="mb-3">Seems you're a bit early to the party!<br/>In the meantime, check out our <a href="https://github.com/TylerMathis/COP4331G1P1">GitHub</a> for updates.</p>
-			<a style="margin-bottom: 20px;" href="index.html">Back to login...</a>
+			<button style="width: 75%; border-radius: 24px;" class="btn btn-primary" onclick="cookieDebug()">Check Cookie</button>
+			<span id="cookieStatus" style="margin-top: 20px"></span>
+			<span id="cookieValid" style="margin-top: 20px"></span>
+			<a style="margin-bottom: 20px; margin-top: 20px;" href="javascript:doLogout()">Logout...</a>
 		</div>
 	</div>
 </div>
