--- a/landing_page.html
+++ b/landing_page.html
@@ -28,12 +28,9 @@
 			<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-key-fill" viewBox="0 0 16 16">
 				<path d="M3.5 11.5a3.5 3.5 0 1 1 3.163-5H14L15.5 8 14 9.5l-1-1-1 1-1-1-1 1-1-1-1 1H6.663a3.5 3.5 0 0 1-3.163 2zM2.5 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
 			</svg>
-			<h3 class="mb-3">Welcome :)</h3>
+			<h3 id="welcome" class="mb-3">Welcome</h3>
 			<p class="mb-3">Seems you're a bit early to the party!<br/>In the meantime, check out our <a href="https://github.com/TylerMathis/COP4331G1P1">GitHub</a> for updates.</p>
-			<button style="width: 75%; border-radius: 24px;" class="btn btn-primary" onclick="cookieDebug()">Check Cookie</button>
-			<span id="cookieStatus" style="margin-top: 20px"></span>
-			<span id="cookieValid" style="margin-top: 20px"></span>
-			<a style="margin-bottom: 20px; margin-top: 20px;" href="javascript:doLogout()">Logout...</a>
+			<a href="javascript:doLogout()">Logout...</a>
 		</div>
 	</div>
 </div>
