--- a/create_account.html
+++ b/create_account.html
@@ -8,6 +8,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 	<script type="text/javascript" src="js/cookies.js"></script>
 	<script type="text/javascript" src="js/design.js"></script>
+	<script type="text/javascript" src="js/create_account.js"></script>
 	<script type="text/javascript" src="js/user.js"></script>
 </head>
 
