--- a/landing_page.html
+++ b/landing_page.html
@@ -8,6 +8,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 	<script type="text/javascript" src="js/cookies.js"></script>
 	<script type="text/javascript" src="js/design.js"></script>
+	<script type="text/javascript" src="js/landing_page.js"></script>
 	<script type="text/javascript" src="js/user.js"></script>
 	<script type="text/javascript" src="js/contact.js"></script>
 </head>
