Contacts now selectable

--- a/landing_page.html
+++ b/landing_page.html
@@ -316,11 +316,11 @@
 									<div class="d-flex" style="min-height: 50px; margin-top: 25px;">
 										<div class="profile-icon d-flex justify-content-center align-self-center">
 											<div class="align-self-center" style="width: 100%;">
-												<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">TM</h3>
+												<h3 id="info-initials" style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">NC</h3>
 											</div>
 										</div>
 										<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
-											<h5 style="text-align: center; margin: 0; width: 100%;">Tyler Mathis</h5>
+											<h5 id="info-fullname" style="text-align: center; margin: 0; width: 100%;">No Contacts</h5>
 										</div>
 									</div>
 								</div>
@@ -349,32 +349,32 @@
 									<div class="info" style="margin-top: 25px;">
 										<form class="row g-3">
 											<div class="col-md-4">
-												<label for="first-name"><strong>First Name</strong></label>
-												<p id="first-name">Tyler</p>
+												<label for="info-first-name"><strong>First Name</strong></label>
+												<p id="info-first-name">No Contacts</p>
 											</div>
 											<div class="col-md-4">
-												<label for="last-name"><strong>Last Name</strong></label>
-												<p id="last-name">Hostler-Mathis</p>
+												<label for="info-last-name"><strong>Last Name</strong></label>
+												<p id="info-last-name">No Contacts</p>
 											</div>
 											<div class="col-md-4">
-												<label for="phone-number"><strong>Phone Number</strong></label>
-												<p id="phone-number">813-888-8888</p>
+												<label for="info-phone-number"><strong>Phone Number</strong></label>
+												<p id="info-phone-number">No Contacts</p>
 											</div>
 											<div class="col-md-8">
-												<label for="address"><strong>Address</strong></label>
-												<p id="address">11111 Someplace Ln</p>
+												<label for="info-address"><strong>Address</strong></label>
+												<p id="info-address">No Contacts</p>
 											</div>
 											<div class="col-md-4">
-												<label for="phone-number"><strong>ZIP</strong></label>
-												<p id="ZIP">11111</p>
+												<label for="info-zip"><strong>ZIP</strong></label>
+												<p id="info-zip">No Contacts</p>
 											</div>
 											<div class="col-md-8">
-												<label for="city"><strong>City</strong></label>
-												<p id="city">Tampa</p>
+												<label for="info-city"><strong>City</strong></label>
+												<p id="info-city">No Contacts</p>
 											</div>
 											<div class="col-md-4">
-												<label for="state"><strong>State</strong></label>
-												<p id="state">Florida</p>
+												<label for="info-state"><strong>State</strong></label>
+												<p id="info-state">No Contacts</p>
 											</div>
 										</form>
 									</div>
