Contact Creation, and Deletion now supported

--- a/landing_page.html
+++ b/landing_page.html
@@ -42,6 +42,7 @@
 		<!--Contacts-->
 		<div class="col-4">
 			<div class="p-3 beveledBox">  
+				<!--
 				<div class="input-group mb-3">
 					<input type="text" class="form-control" placeholder="Search Query">
 					<button type="button" class="btn btn-outline-secondary">All</button>
@@ -54,6 +55,7 @@
 						<li><a class="dropdown-item" href="#">Address</a></li>
 					</ul>
 				</div>
+				-->
 				<ul class="list-group contacts overflow-auto" id="contactLanding">
 					<!--Contact Group-->
 				</ul>
@@ -306,7 +308,7 @@
 												</div>
 												<div class="modal-footer">
 													<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-													<button type="button" class="btn btn-primary">Save changes</button>
+													<button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="editSelectedContact()">Save changes</button>
 												</div>
 											</div>
 										</div>
