--- a/landing_page.html
+++ b/landing_page.html
@@ -348,8 +348,7 @@
 											<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 										</div>
 										<div class="modal-footer">
-											<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-											<button id="delete-btn" type="button" class="btn btn-primary" data-bs-dismiss="modal">Yes</button>
+											<button id="delete-btn" type="button" class="btn btn-danger" data-bs-dismiss="modal">Yes</button>
 										</div>
 									</div>
 								</div>
