--- a/landing_page.html
+++ b/landing_page.html
@@ -69,8 +69,9 @@
 			</ul>
 		</div>
 
-		<div class="p-3 beveledBox" id="notificationLanding" style="width: 100%;">
+		<div class="p-3 beveledBox" style="width: 100%;">
 			<!-- New -->
+			<div class="d-flex" id="notificationLanding" style="justify-content: center;"></div>
 			<div class="d-flex" style="align-items: center">
 				<!-- New Modal -->
 				<div class="modal fade" id="newModal" data-bs-backdrop="static" tabindex="-1">
