Adjust css text inputs.

--- a/landing_page.html
+++ b/landing_page.html
@@ -47,13 +47,13 @@
 					<svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16" style="padding: 0">
 						<path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
 					</svg>
-					<div style="font-weight: bold">Add</div>
+					<h5 class="mb-0">Add</h5>
 				</button>
 			</div>
 
 
 			<div class="input-group mb-3">
-				<input type="text" class="form-control" placeholder="Search Query" style="max-height: 40px; border-radius: 20px">
+				<input type="text" class="form-control search-bar" placeholder="Search Query" style="max-height: 40px; border-radius: 20px">
 				<!--					<button type="button" class="btn btn-outline-secondary">All</button>-->
 				<!--					<button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">-->
 				<!--						<span class="visually-hidden">Toggle Dropdown</span>-->
@@ -104,7 +104,7 @@
 			<div class="contact-data">
 				<div id="edit-modal-prop"></div>
 				<div id="delete-modal-prop"></div>
-				<div class="profile-icon enlarged d-flex justify-content-center align-self-center">
+				<div class="profile-icon enlarged d-flex justify-content-center align-self-center mt-5">
 					<div class="align-self-center" style="width: 100%;">
 						<h3 class="profile-ab enlarged" id="info-initials" style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">NC</h3>
 					</div>
