--- a/modal/editModal.html
+++ b/modal/editModal.html
@@ -103,9 +103,9 @@
                     </form>
                 </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="editSelectedContact()">Save changes</button>
+            <div class="modal-footer spaced">
+                <button type="button" class="btn btn-secondary rounded compact" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary rounded compact" data-bs-dismiss="modal" onclick="editSelectedContact()">Save changes</button>
             </div>
         </div>
     </div>
