--- a/modal/createModal.html
+++ b/modal/createModal.html
@@ -97,9 +97,9 @@
                     </form>
                 </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button id="create-btn" type="button" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
+            <div class="modal-footer spaced">
+                <button type="button" class="btn btn-secondary rounded compact" data-bs-dismiss="modal">Cancel</button>
+                <button id="create-btn" type="button" class="btn btn-primary rounded compact" data-bs-dismiss="modal">Save changes</button>
             </div>
         </div>
     </div>
