--- a/modal/deleteModal.html
+++ b/modal/deleteModal.html
@@ -5,9 +5,9 @@
                 <h5 class="modal-title" id="exampleModalLabel">Are you sure?</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button id="delete-btn" type="button" class="btn btn-primary" data-bs-dismiss="modal">Yes</button>
+            <div class="modal-footer spaced">
+                <button type="button" class="btn btn-secondary rounded compact" data-bs-dismiss="modal">Cancel</button>
+                <button id="delete-btn" type="button" class="btn btn-primary rounded compact" data-bs-dismiss="modal">Yes</button>
             </div>
         </div>
     </div>
