fixed recentering notifications

--- a/landing_page.html
+++ b/landing_page.html
@@ -69,7 +69,7 @@
 			</ul>
 		</div>
 
-		<div class="p-3 beveledBox contact-display" id="notificationLanding">
+		<div class="p-3 beveledBox contact-display">
 			<!-- New -->
 			<div class="d-flex" id="notificationLanding" style="justify-content: center;"></div>
 			<div class="d-flex" style="align-items: center">
