--- a/modal/createModal.html
+++ b/modal/createModal.html
@@ -13,31 +13,31 @@
                 <!--Info-->
                 <div class="info">
                     <form id="new-form" class="row g-3">
-                        <div class="col-md-4" data-contact-key="FirstName">
+                        <div class="col-md-4" data-contact-key="FirstName" data-contact-target="#new-first-name">
                             <label for="new-first-name" class="form-label">First Name</label>
                             <input name="FirstName" type="name" class="form-control" id="new-first-name">
                         </div>
-                        <div class="col-md-4" data-contact-key="LastName">
+                        <div class="col-md-4" data-contact-key="LastName" data-contact-target="#new-last-name">
                             <label for="new-last-name" class="form-label">Last Name</label>
                             <input name="LastName" type="name" class="form-control" id="new-last-name">
                         </div>
-                        <div class="col-md-4" data-contact-key="PhoneNumber">
+                        <div class="col-md-4" data-contact-key="PhoneNumber" data-contact-target="#new-phone-number">
                             <label for="new-phone-number" class="form-label">Phone Number</label>
                             <input name="PhoneNumber" type="phone-number" class="form-control" id="new-phone-number">
                         </div>
-                        <div class="col-8" data-contact-key="Address">
+                        <div class="col-8" data-contact-key="Address" data-contact-target="#new-address">
                             <label for="new-address" class="form-label">Address</label>
                             <input name="Address" type="text" class="form-control" id="new-address">
                         </div>
-                        <div class="col-md-4" data-contact-key="ZIP">
+                        <div class="col-md-4" data-contact-key="ZIP" data-contact-target="#new-zip">
                             <label for="new-zip" class="form-label">Zip</label>
                             <input name="ZIP" type="text" class="form-control" id="new-zip">
                         </div>
-                        <div class="col-md-8" data-contact-key="City">
+                        <div class="col-md-8" data-contact-key="City" data-contact-target="#new-city">
                             <label for="new-city" class="form-label">City</label>
                             <input name="City" type="text" class="form-control" id="new-city">
                         </div>
-                        <div class="col-md-4" data-contact-key="State">
+                        <div class="col-md-4" data-contact-key="State" data-contact-target="#new-state">
                             <label for="new-state" class="form-label">State</label>
                             <select name="State" id="new-state" class="form-select">
                                 <option selected>Choose...</option>
